# pdftty

./: README.md  pyproject.toml
pdftty/: __init__.py  ansi_widget.py  controller.py  main.py  model.py  pdf_handling.py  renderer.py  view.py
